syntax = "proto3";

import public "google/protobuf/empty.proto";
import public "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.github.pambrose";

service CanvasService {
  rpc register (ClientInfoMsg) returns (stream ClientInfoMsg) {}
  rpc writeMousePos (stream PositionMsg) returns (google.protobuf.Empty) {}
  rpc readMousePos (google.protobuf.Empty) returns (stream PositionMsg) {}
}

message ClientInfoMsg {
  bool active = 1;
  string id = 2;
  string even = 3;
  string odd = 4;
}

message PositionMsg {
  string id = 1;
  double x = 2;
  double y = 3;
}
